# tolbox

./: README.md  index.html  latest.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: autostart.json  default.json  desktop.json  dialog.json  fs.json  sql.json  window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/autostart/: mod.rs
src-tauri/src/code_feeder/: file_writer.rs  files_reader.rs  folder_opener.rs  mod.rs
src-tauri/src/get_by_bilibili/: mod.rs
src-tauri/src/quick_open/: mod.rs
src-tauri/src/tolbox_window/: mod.rs
src-tauri/src/translate/: mod.rs
src/common/: layout.js
src/components/common/: ContextMenu.vue  Icon.vue  UpdateOverlay.vue
src/components/layout/: MainNav.vue  SubNav.vue
src/db/: index.js
src/db/modules/: autostart.js  user.js
src/db/quickOpen/: index.js
src/db/settings/: autostart.js  user.js
src/router/: index.js
src/stores/: index.js
src/stores/modules/: layout.js
src/views/: LoginView.vue  MainLayout.vue
src/views/contentViews/: AiView.vue  CodeFeederView.vue  GetByBilibili.vue  HomeView.vue  QuickOpen.vue  TidoView.vue  TranslateView.vue
