[package]
name = "tolbox"
version = "0.1.0"
description = "Tolbox is a tool storage box."
authors = ["jaso"]
edition = "2024"


[lib]
name = "tolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-persisted-scope = "2"
#开机自启
tauri-plugin-autostart = "2.5.0"
anyhow = "1.0.98"

tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# 翻译用：
    #http请求
reqwest = { version = "0.11", features = ["json", "blocking"] }
    # scraper解析html(类似beautifulsoup)
scraper = "0.17"
# 下载bilibili视频
regex = "1"
flate2 = "1"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }

tokio = {version = "1" ,features = ["macros", "rt-multi-thread", "process"] }
urlencoding = "2.1.3"
winapi = { version = "0.3.9" ,features = ["winbase"] }
[features]
[profile.release]
opt-level = 3      # 最高优化级别
lto = true         # 链接时优化
codegen-units = 1  # 减少并行编译单元以提高优化
panic = "abort"    # 将 panic 转换为中止以减小二进制大小
strip = true       # 移除调试符号

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
